--- a/public/styles/tweet-list.css
+++ b/public/styles/tweet-list.css
@@ -4,7 +4,7 @@ article.tweet {
   width: 100%;
   border: 3px solid #555149;
   border-width: thick;
-  margin: 30px 0;
+  margin-bottom: 30px;
   padding: 25px;
 }
 
